align navbar and hero with feature card design

--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Build Better Routines</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Instrument+Sans:wght@400;500&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Routina — Build Better Routines</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Instrument+Sans:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <!-- Navigation -->
-        <nav class="navbar">
-            <a href="#how-it-works">HOW IT WORKS</a>
-            <a href="#features">FEATURES</a>
-            <a href="#get-started" class="active">GET STARTED</a>
-        </nav>
+  <main class="container">
+    <!-- Navigation -->
+    <nav class="navbar" aria-label="Primary">
+      <a href="#how-it-works">HOW IT WORKS</a>
+      <a href="#features">FEATURES</a>
+      <a href="#get-started" class="active">GET STARTED</a>
+    </nav>
 
-        <!-- Hero Section -->
-        <section class="hero">
-            <h1>BUILD BETTER ROUTINES</h1>
-            <p>A simple habit and routine tracking app designed to help you stay consistent.</p>
-            <button class="cta-button">Get Started</button>
-        </section>
+    <!-- Hero Section -->
+    <section class="hero" id="get-started">
+      <h1>BUILD BETTER ROUTINES</h1>
+      <p>A simple habit and routine tracking app designed to help you stay consistent.</p>
+      <button class="cta-button" type="button">Get Started</button>
+    </section>
 
-        <!-- Features Grid -->
-        <section class="features">
-            <div class="feature-card">
-                <div class="card-icon"></div>
-                <h2>Simple Habit Tracking</h2>
-                <p>Track your daily habits and routines with a clean, distraction-free interface.</p>
-            </div>
+    <!-- Features Grid -->
+    <section class="features" id="features" aria-label="Features">
+      <div class="feature-card">
+        <div class="card-icon"></div>
+        <h2>Simple Habit Tracking</h2>
+        <p>Track your daily habits and routines with a clear, minimal dashboard.</p>
+      </div>
 
-            <div class="feature-card">
-                <div class="card-icon"></div>
-                <h2>Stay Focused, Every Day</h2>
-                <p>See what matters today and build consistency step by step.</p>
-            </div>
+      <div class="feature-card">
+        <div class="card-icon"></div>
+        <h2>Stay Focused, Every Day</h2>
+        <p>See what matters today and build consistency step by step.</p>
+      </div>
 
-            <div class="feature-card">
-                <div class="card-icon"></div>
-                <h2>Built for Calm Progress</h2>
-                <p>No noise, no pressure — just a clear view of your routines.</p>
-            </div>
-        </section>
-    </div>
+      <div class="feature-card">
+        <div class="card-icon"></div>
+        <h2>Built for Calm Progress</h2>
+        <p>No noise, no pressure — just a clear view of your routines.</p>
+      </div>
+    </section>
+
+    <section id="how-it-works" class="sr-only" aria-hidden="true"></section>
+  </main>
+
+  
 </body>
 </html>
