feat: update landing layout and styles

--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Instrument+Sans:wght@400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-  <main class="container">
+  <div class="page-scale">
+    <main class="container">
     <!-- Navigation -->
     <nav class="navbar" aria-label="Primary">
       <a href="#how-it-works">HOW IT WORKS</a>
       <a href="#features">FEATURES</a>
-      <a href="#get-started" class="active">GET STARTED</a>
+      <a href="#get-started" class="active" aria-current="page" >GET STARTED</a>
     </nav>
 
     <!-- Hero Section -->
     <section class="hero" id="get-started">
       <h1>BUILD BETTER ROUTINES</h1>
       <p>A simple habit and routine tracking app designed to help you stay consistent.</p>
-      <button class="cta-button" type="button">Get Started</button>
+      <button class="cta-button" type="button" aria-label="Get Started with Routina">Get Started</button>
     </section>
 
     <!-- Features Grid -->
@@ -44,8 +45,14 @@
       </div>
     </section>
 
-    <section id="how-it-works" class="sr-only" aria-hidden="true"></section>
-  </main>
+      <section id="how-it-works" class="sr-only" aria-hidden="true"></section>
+    </main>
+
+    <footer class="footer">
+      Designed & built by <span class="footer-brand">noirys.dev</span>
+    </footer>
+  </div>
+
 
   
 </body>
