--- a/index.html
+++ b/index.html
@@ -1,49 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Routina — Build Better Routines</title>
   <link rel="stylesheet" href="styles.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Instrument+Sans:wght@400;500&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Display&family=Instrument+Sans:wght@400;500&display=swap"
+    rel="stylesheet">
 </head>
+
 <body>
   <div class="page-scale">
     <main class="container">
-    <!-- Navigation -->
-    <nav class="navbar" aria-label="Primary">
-      <a href="#how-it-works">HOW IT WORKS</a>
-      <a href="#features">FEATURES</a>
-      <a href="#get-started" class="active" aria-current="page" >GET STARTED</a>
-    </nav>
+      <!-- Navigation -->
+      <nav class="navbar" aria-label="Primary">
+        <a href="#how-it-works">HOW IT WORKS</a>
+        <a href="#features">FEATURES</a>
+        <a href="#get-started" class="active" aria-current="page">GET STARTED</a>
+      </nav>
 
-    <!-- Hero Section -->
-    <section class="hero" id="get-started">
-      <h1>BUILD BETTER ROUTINES</h1>
-      <p>A simple habit and routine tracking app designed to help you stay consistent.</p>
-      <button class="cta-button" type="button" aria-label="Get Started with Routina">Get Started</button>
-    </section>
+      <!-- Hero Section -->
+      <section class="hero" id="get-started">
+        <h1>ROUTINA</h1>
+        <p>Build a routine you can actually stick to.</p>
+        <p>Simple tracking, calm design, zero noise.</p>
+        <button class="cta-button" type="button" aria-label="Get early access to Routina">Get Early Access</button>
+        <span class="hero-note">
+          No signup required. Just a preview of what’s coming.
+        </span>
+      </section>
 
-    <!-- Features Grid -->
-    <section class="features" id="features" aria-label="Features">
-      <div class="feature-card">
-        <div class="card-icon"></div>
-        <h2>Simple Habit Tracking</h2>
-        <p>Track your daily habits and routines with a clear, minimal dashboard.</p>
-      </div>
 
-      <div class="feature-card">
-        <div class="card-icon"></div>
-        <h2>Stay Focused, Every Day</h2>
-        <p>See what matters today and build consistency step by step.</p>
-      </div>
+      <!-- Features Grid -->
+      <section class="features" id="features" aria-label="Features">
+        <div class="feature-card">
+          <div class="card-icon"></div>
+          <h2>Simple Habit Tracking</h2>
+          <p>Track your daily habits and routines with a clear, minimal dashboard.</p>
+        </div>
 
-      <div class="feature-card">
-        <div class="card-icon"></div>
-        <h2>Built for Calm Progress</h2>
-        <p>No noise, no pressure — just a clear view of your routines.</p>
-      </div>
-    </section>
+        <div class="feature-card">
+          <div class="card-icon"></div>
+          <h2>Stay Focused, Every Day</h2>
+          <p>See what matters today and build consistency step by step.</p>
+        </div>
+
+        <div class="feature-card">
+          <div class="card-icon"></div>
+          <h2>Built for Calm Progress</h2>
+          <p>No noise, no pressure — just a clear view of your routines.</p>
+        </div>
+      </section>
 
       <section id="how-it-works" class="sr-only" aria-hidden="true"></section>
     </main>
@@ -54,6 +63,7 @@
   </div>
 
 
-  
+
 </body>
+
 </html>
